--- a/index.html
+++ b/index.html
@@ -26,10 +26,25 @@ SOFTWARE.
 <html lang="en">
 
     <head>
+        <title>Abendiix | Games, tools and more!</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Abendiix | Games, tools and more!</title>
         <meta name="description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
+        
+        <!--Meta tags -->
+        <meta property="og:url" content="https://abendiix.com">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Abendiix | Games, tools and more!">
+        <meta property="og:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
+        <meta property="og:image" content="assets/img/logos/favicon.svg">
+        <meta name="twitter:card" content="assets/img/logos/favicon.svg">
+        <meta property="twitter:domain" content="abendiix.com">
+        <meta property="twitter:url" content="https://abendiix.com">
+        <meta name="twitter:title" content="Abendiix | Games, tools and more!">
+        <meta name="twitter:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
+        <meta name="twitter:image" content="assets/img/logos/favicon.svg">
+        <!--Meta tags-->
+
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/animate.min.css">
