Added rss and more social media platforms and minor translation fix

--- a/index.html
+++ b/index.html
@@ -731,18 +731,47 @@ SOFTWARE.
                         
                         <h4 id="socials">Socials</h4>
                         
+                        <!--rss-->
+                        <a aria-label="Link to Abendiix's RSS." href="" target="_blank" id="rsslink">
+                            <img alt="RSS icon in black (clear mode) that redirects to Abendiix's RSS."
+                            src="assets/img/icons/rss.svg" style="width: 35px" id="rss" class="changeableColor"></a>
+                        <!--rss-->
+
                         <!--twitter-->
                         <a aria-label="Link to Abendiix's Twitter." href="https://twitter.com/Abendiix" target="_blank" id="twitterlink">
                             <img alt="Twitter icon in black (clear mode) that redirects to Abendiix's profile."
-                            src="assets/img/icons/x-twitter.svg" style="width: 35px" id="twitter" class="changeableColor"></a>
+                            src="assets/img/icons/x-twitter.svg" style="margin-left: 10px; width: 35px" id="twitter" class="changeableColor"></a>
                         <!--twitter-->
 
                         <!--bluesky-->
                         <a aria-label="Link to Abendiix's Bluesky." href="https://bsky.app/profile/abendiix.com" target="_blank" id="blueskylink">
                             <img alt="Bluesky icon in black (clear mode) that redirects to Abendiix's profile."
-                            src="assets/img/icons/bluesky.svg" style="margin-left: 10px; width: 35px" id="bluesky" class="changeableColor">
-                        </a>
+                            src="assets/img/icons/bluesky.svg" style="margin-left: 10px; width: 35px" id="bluesky" class="changeableColor"></a>
                         <!--bluesky-->
+
+                        <!--tiktok-->
+                        <a aria-label="Link to Abendiix's TikTok." href="https://www.tiktok.com/@abendiix" target="_blank" id="tiktoklink">
+                            <img alt="TikTok icon in black (clear mode) that redirects to Abendiix's profile."
+                            src="assets/img/icons/tiktok.svg" style="margin-left: 10px; height: 35px" id="tiktok" class="changeableColor"></a>
+                        <!--tiktok-->
+
+                        <!--instagram-->
+                        <a aria-label="Link to Abendiix's Instagram." href="https://www.instagram.com/abendiix/" target="_blank" id="instagramlink">
+                            <img alt="Instagram icon in black (clear mode) that redirects to Abendiix's profile."
+                            src="assets/img/icons/instagram.svg" style="margin-left: 10px; width: 35px" id="instagram" class="changeableColor"></a>
+                        <!--instagram-->
+
+                        <!--youtube-->
+                        <a aria-label="Link to Abendiix's YouTube." href="https://www.youtube.com/@Abendiix" target="_blank" id="youtubelink">
+                            <img alt="YouTube icon in black (clear mode) that redirects to Abendiix's profile."
+                            src="assets/img/icons/youtube.svg" style="margin-left: 10px; height: 35px" id="youtube" class="changeableColor"></a>
+                        <!--youtube-->
+
+                        <!--reddit-->
+                        <a aria-label="Link to Abendiix's Reddit." href="https://www.reddit.com/user/Abendiix/" target="_blank" id="redditlink">
+                            <img alt="Reddit icon in black (clear mode) that redirects to Abendiix's profile."
+                            src="assets/img/icons/reddit.svg" style="margin-left: 10px; height: 35px" id="reddit" class="changeableColor"></a>
+                        <!--reddit-->
 
                     </div>
                     <!--Socials' section-->
