--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ SOFTWARE.
         <meta property="og:type" content="website">
         <meta property="og:title" content="Abendiix | Games, tools and more!">
         <meta property="og:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
-        <meta property="og:image" content="assets/img/logos/favicon.svg">
-        <meta name="twitter:card" content="assets/img/logos/favicon.svg">
+        <meta property="og:image" content="assets/img/logos/logo.png">
+        <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="abendiix.com">
         <meta property="twitter:url" content="https://abendiix.com">
         <meta name="twitter:title" content="Abendiix | Games, tools and more!">
         <meta name="twitter:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
-        <meta name="twitter:image" content="assets/img/logos/favicon.svg">
+        <meta name="twitter:image" content="assets/img/logos/logo.png">
         <!--Meta tags-->
 
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
