Images referenced content changed

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@ SOFTWARE.
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
         
-        <!--Meta tags -->
+        <!--Meta tags-->
         <meta property="og:url" content="https://abendiix.com">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Abendiix | Games, tools and more!">
         <meta property="og:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
-        <meta property="og:image" content="assets/img/logos/logo.png">
+        <meta property="og:image" content="https://abendiix.com/assets/img/logos/logo.png">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="abendiix.com">
         <meta property="twitter:url" content="https://abendiix.com">
         <meta name="twitter:title" content="Abendiix | Games, tools and more!">
         <meta name="twitter:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
-        <meta name="twitter:image" content="assets/img/logos/logo.png">
+        <meta name="twitter:image" content="https://abendiix.com/assets/img/logos/logo.png">
         <!--Meta tags-->
 
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
