Fixed type of card

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ SOFTWARE.
         <meta property="og:title" content="Abendiix | Games, tools and more!">
         <meta property="og:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
         <meta property="og:image" content="https://abendiix.com/assets/img/logos/logo.png">
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary">
         <meta property="twitter:domain" content="abendiix.com">
         <meta property="twitter:url" content="https://abendiix.com">
         <meta name="twitter:title" content="Abendiix | Games, tools and more!">
