Improved image meta tags

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@ SOFTWARE.
         <meta property="og:type" content="website">
         <meta property="og:title" content="Abendiix | Games, tools and more!">
         <meta property="og:description" content="I'm Abendiix and I make games, tools and anything that can change the world, making it a better place for everyone.">
-        <meta property="og:image" content="https://abendiix.com/assets/img/logos/logo.png">
+        <meta property="og:image" content="http://abendiix.com/assets/img/logos/logo.png">
+        <meta property="og:image:secure_url" content="https://abendiix.com/assets/img/logos/logo.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="480">
+        <meta property="og:image:height" content="480">
+        <meta property="og:image:alt" content="Abendiix's logo. It displays both the A, represented with an isosceles triangle, and the X, represented with 2 smaller inverted isosceles triangles that touch on the angles opposite to the triangles' bases, from Abendiix. There are also two straight lines above and below both letters to make the logo feel more squared.">
         <meta name="twitter:card" content="summary">
         <meta property="twitter:domain" content="abendiix.com">
         <meta property="twitter:url" content="https://abendiix.com">
