404's language script fixed

--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@ SOFTWARE.
                 404 Error
             </h1>
             <!--Error message-->
-            
+
         </div>
         <!--Container for the 404 error-->
 
@@ -88,14 +88,14 @@ SOFTWARE.
         <!--Copyright notice-->
 
         <!--Emoti gag-->
-        <div aria-label="Small gag about a emoti-like text throwing randomly generated food emojis." id="emotigag">
-            <p aria-label="Multiple characters arranged to look like a happy face throwing stars and a random food emoji." id="emoti"> ∘∘∘(°ヮ°)?</p>
+        <div aria-label="Small gag about a emoti-like text being confused." id="emotigag">
+            <p aria-label="Multiple characters arranged to look like a confused face." id="emoti"> ∘∘∘(°ヮ°)?</p>
         </div>
         <!--Emoti gag-->
 
         <!--Scripts-->
         <script src="assets/js/copyToClipboardScript.js"></script>
-        <script src="assets/js/languageChanged.js"></script>
+        <script src="assets/js/languageChanged404.js"></script>
         <script src="assets/js/clearAndDark.js"></script>
         <script src="assets/js/visibility.js"></script>
         <!--Scripts-->
