Added abendiix.com to 404 page for ease of use

--- a/404.html
+++ b/404.html
@@ -68,6 +68,10 @@ SOFTWARE.
             </h1>
             <!--Error message-->
 
+            <h2>
+                <a href="https://abendiix.com">abendiix.com</a>
+            </h2>
+
         </div>
         <!--Container for the 404 error-->
 
