Added changeableColorLink to abendiix.com on 404.html

--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ SOFTWARE.
             <!--Error message-->
 
             <h2>
-                <a href="https://abendiix.com">abendiix.com</a>
+                <a href="https://abendiix.com" class="changeableColorLink">abendiix.com</a>
             </h2>
 
         </div>
