--- a/index.html
+++ b/index.html
@@ -701,7 +701,13 @@ SOFTWARE.
         <div class="container text-justified" style="margin-top: 3vh">
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
-                <p aria-label="4 symbols. At the top left corner there's the symbol for the release category. It is a red rhombus with a square dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline. At the top right corner there's the symbol for the preview category. It is a blue circle with a square dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline.At the bottom left corner there's the symbol for the update category. It is a green triangle with a square dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline. At the bottom right there's the symbol for the extra category. It is an orange cross with 4 square dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px;">
+
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/release.svg" width="40vw">
+                </p>
+                <p id="post2" style="margin: 0px">The website is now fully functional!</p>
+                
+                <p aria-label="4 symbols. At the top left corner there's the symbol for the release category. It is a red rhombus with a square dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline. At the top right corner there's the symbol for the preview category. It is a blue circle with a square dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline.At the bottom left corner there's the symbol for the update category. It is a green triangle with a square dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline. At the bottom right there's the symbol for the extra category. It is an orange cross with 4 square dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                     <img src="assets/img/icons/update.svg" width="40vw">
