--- a/index.html
+++ b/index.html
@@ -705,6 +705,16 @@ SOFTWARE.
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
+                <p id="post2" style="margin: 0px">Make wallpapers with your favorite sprites using Sprites Love!</p>
+
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px"></p>
+                    <img src="assets/img/icons/release.svg" width="40vw">
+                </p>
+                <p id="post2" style="margin: 0px">My fonts are now available and with CC0 license!</p>
+
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/release.svg" width="40vw">
+                </p>
                 <p id="post2" style="margin: 0px">The website is now fully functional!</p>
                 
                 <p aria-label="4 symbols. At the top left corner there's the symbol for the release category. It is a red rhombus with a square dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline. At the top right corner there's the symbol for the preview category. It is a blue circle with a square dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline.At the bottom left corner there's the symbol for the update category. It is a green triangle with a square dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline. At the bottom right there's the symbol for the extra category. It is an orange cross with 4 square dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
