Post 6 and date update

--- a/index.html
+++ b/index.html
@@ -702,20 +702,30 @@ SOFTWARE.
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post5" style="margin: 0px">02-11-2024 - Say hi to Boto! The protagonist of my next game!</p>
+
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
-                <p id="post2" style="margin: 0px">Make wallpapers with your favorite sprites using Sprites Love!</p>
+                <p id="post5" style="margin: 0px">31-10-2024 - Trom is now available! Play around with a trumpet and guess its sounds!</p>
+
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/release.svg" width="40vw">
+                </p>
+                <p id="post4" style="margin: 0px">29-10-2024 - Make wallpapers with your favorite sprites using Sprites Love!</p>
 
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px"></p>
                     <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
-                <p id="post2" style="margin: 0px">My fonts are now available and with CC0 license!</p>
+                <p id="post3" style="margin: 0px">26-10-2024 - My fonts are now available and with CC0 license!</p>
 
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
-                <p id="post2" style="margin: 0px">The website is now fully functional!</p>
+                <p id="post2" style="margin: 0px">24-10-2024 - The website is now fully functional!</p>
                 
                 <p aria-label="4 symbols. At the top left corner there's the symbol for the release category. It is a red rhombus with a square dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline. At the top right corner there's the symbol for the preview category. It is a blue circle with a square dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline.At the bottom left corner there's the symbol for the update category. It is a green triangle with a square dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline. At the bottom right there's the symbol for the extra category. It is an orange cross with 4 square dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
@@ -723,7 +733,7 @@ SOFTWARE.
                     <img src="assets/img/icons/update.svg" width="40vw">
                     <img src="assets/img/icons/extra.svg" width="40vw">
                 </p>
-                <p id="post1">In this website, you will find 4 different types of posts. The red rhombus for releases, the blue circle for previews, the green triangle for updates and the orange cross for anything else.</p> <p>More information at <a aria-label="Link to abendiix.com/social that redirects to Abendiix's social repository on GitHub" href="https://abendiix.com/social" target="_blank">abendiix.com/social</a></p>
+                <p id="post1">22-10-2024 - In this website, you will find 4 different types of posts. The red rhombus for releases, the blue circle for previews, the green triangle for updates and the orange cross for anything else.</p> <p>More information at <a aria-label="Link to abendiix.com/social that redirects to Abendiix's social repository on GitHub" href="https://abendiix.com/social" target="_blank">abendiix.com/social</a></p>
             </details>
 
         </div>
