--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
+                <p id="post5" style="margin: 0px">07-11-2024 - It's Boto again! But they are inside of a... grid?</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
                 <p id="post5" style="margin: 0px">05-11-2024 - Take a look at Akompi, my new project! Akompi is both a virtual pet and companion where you can create and customize any virtual pets and companions that you want. This is Neko having some fun! A classic when it comes to virtual pets.</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
