--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ SOFTWARE.
             <!--Trom's presskit-->
         </div>
         <!--Presskits-->
-
+Looks like Neko is playing with one of their friends!
         <!--Updates-->
         <div class="container text-justified" style="margin-top: 3vh">
             <details style="font-size: 75%;">
@@ -705,17 +705,27 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
-                <p id="post5" style="margin: 0px">07-11-2024 - It's Boto again! But they are inside of a... grid?</p>
+                <p id="post10" style="margin: 0px">12-11-2024 - This is Mibo! One of the characters that will accompany Boto in my next game!</p>
+                
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post9" style="margin: 0px">09-11-2024 - Looks like Neko is playing with one of their friends!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
-                <p id="post5" style="margin: 0px">05-11-2024 - Take a look at Akompi, my new project! Akompi is both a virtual pet and companion where you can create and customize any virtual pets and companions that you want. This is Neko having some fun! A classic when it comes to virtual pets.</p>
+                <p id="post8" style="margin: 0px">07-11-2024 - It's Boto again! But they are inside of a... grid?</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
-                <p id="post5" style="margin: 0px">02-11-2024 - Say hi to Boto! The protagonist of my next game!</p>
+                <p id="post7" style="margin: 0px">05-11-2024 - Take a look at Akompi, my new project! Akompi is both a virtual pet and companion where you can create and customize any virtual pets and companions that you want. This is Neko having some fun! A classic when it comes to virtual pets.</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post6" style="margin: 0px">02-11-2024 - Say hi to Boto! The protagonist of my next game!</p>
 
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
