--- a/index.html
+++ b/index.html
@@ -696,12 +696,22 @@ SOFTWARE.
             <!--Trom's presskit-->
         </div>
         <!--Presskits-->
-Looks like Neko is playing with one of their friends!
+
         <!--Updates-->
         <div class="container text-justified" style="margin-top: 3vh">
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post12" style="margin: 0px">16-11-2024 - Looks like Mibo and Boto are chilling inside the grid. What are those potions and that pipe? Is that a lab?</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post11" style="margin: 0px">14-11-2024 - Oh to be an itty bitty cat that only sleeps!</p>
+                
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
