--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
+                <p id="post14" style="margin: 0px">21-11-2024 - You can pet the cat with Boto!!</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
                 <p id="post13" style="margin: 0px">19-11-2024 - Three Nekos synchronized like a clock! What haven they seen?</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
